# serializer version: 1
# name: test_binary_sensor_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Air Purifier 131s][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Air Purifier 200s][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Air Purifier 400s][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Air Purifier 600s][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'name': 'Dimmable Light',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Dimmable Light][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Dimmer Switch][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Humidifier 200s][devices]
  list([
  ])
# ---
# name: test_binary_sensor_state[Humidifier 200s][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Humidifier 600S][devices]
  list([
  ])
# ---
# name: test_binary_sensor_state[Humidifier 600S][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'name': 'Outlet',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Outlet][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'name': 'Temperature Light',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Temperature Light][entities]
  list([
  ])
# ---
# name: test_binary_sensor_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'name': 'Wall Switch',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_binary_sensor_state[Wall Switch][entities]
  list([
  ])
# ---
